# llvm-practice

./: .gitignore  callgraph.dot  help
apollo-lib/: libpredictor_manager.so.bc
callgraphPass/: CMakeLists.txt
callgraphPass/callgraph_iterator/: CMakeLists.txt  callgraph_traverse.cpp
conditionCollect/: CMakeLists.txt
conditionCollect/conditionCollectPass/: CMakeLists.txt  pass.cpp
hellopass/: a.out  instrument.txt  test  test.bc  test.bc.callgraph.dot  test.c  test.ll  xray-log.test.cKwgy0
instrumentation/: CMakeLists.txt
instrumentation/InstrumentFunctions/: Pass.cpp  logger.c
instrumentation/examples/buffer/: buffer  buffer.bc  instrumented_buffer.bc  traces.1
instrumentation/examples/hello/: hello.bc  hello.cpp  hello.h  instrumented_hello.bc  test  test.cpp  toinstr.txt  traces.1
instrumentation/examples/performance/: traces.1
notes/: llvm-build.md  llvm-pass.md
pure_pursuit_ana/pure_pursuit/: CMakeLists.txt
pure_pursuit_ana/pure_pursuit/src/: pure_pursuit_core.cpp
test/src/: -g  .hello.o.bc  .test.o.bc  hello.c  hello.h  libhello.so.bc  test  test.bc  test.c
